--- a/src/main/resources/lang/component/en_US.lang
+++ b/src/main/resources/lang/component/en_US.lang
@@ -1,3 +1,19 @@
+#
+# Copyright (c) 2020. ForteScarlet All rights reserved.
+# Project  component-jcq (Code other than JCQ)
+# File     en_US.lang (Code other than JCQ)
+#
+# You can contact the author through the following channels:
+# github https://github.com/ForteScarlet
+# gitee  https://gitee.com/ForteScarlet
+# email  ForteScarlet@163.com
+# QQ     1149159218
+#
+# JCQ's code is copyrighted by JCQ
+# you can see at: https://github.com/meowya/jcq-coolq
+#
+#
+
 # 送信失败
 exception.JCQSender.failed=Delivery failed! Status code: {0} Information: {1}
 # after
